# ml-core-ops

./: .gitignore  README.md
conv2d/: convlib.c  convlib.h  convlib_cython.pyx  main.py  readme.md  requirements.txt  setup.py
im2col/: main.c  main.py
matrix-mult/: CMakeLists.txt  main.c
